--- a/components/PageCarnival/GameCard/style.module.scss
+++ b/components/PageCarnival/GameCard/style.module.scss
@@ -116,7 +116,7 @@
   }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
   .bigStyle {
     width: calc(66.6% - 2.5rem) !important;
     .gameCover {
@@ -131,7 +131,7 @@
   }
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
   .bigStyle {
     width: calc(100% - 1.33rem) !important;
     .gameCover {
@@ -155,6 +155,16 @@
           color: rgba($color: white, $alpha: 0.6);
         }
       }
+    }
+    .trialBtn {
+      height: 3rem;
+      background: rgba($color: #8e50e4, $alpha: 0.1);
+      border-radius: 0.5rem;
+      font-size: 1.17rem;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #8e50e4;
+      line-height: 1.17rem;
     }
   }
 }
