--- a/components/GameInfo/styles.module.scss
+++ b/components/GameInfo/styles.module.scss
@@ -66,12 +66,31 @@
       }
     }
   }
-  .gameDesc {
-    font-size: 1.5rem;
-    font-family: Inter-Medium, Inter;
-    font-weight: 500;
-    color: #222222;
-    line-height: 2.5rem;
+  .gameDescBox {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    .gameDesc {
+      font-size: 1.5rem;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #222222;
+      line-height: 2.5rem;
+    }
+    .strategyBtn {
+      user-select: none;
+      flex-shrink: 0;
+      margin-left: 1rem;
+      font-size: 1.17rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: #222222;
+      line-height: 1.17rem;
+      padding: 0.92rem 1.75rem;
+      border-radius: 2rem;
+      cursor: pointer;
+      border: 0.08rem solid rgba($color: #222, $alpha: 0.3);
+    }
   }
 
   .mobileHeader {
@@ -132,6 +151,21 @@
         height: 3rem;
         background-color: rgba($color: #4a99e9, $alpha: 0.1);
       }
+    }
+    .strategyBtn {
+      width: 100%;
+      font-size: 1.17rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: #222222;
+      line-height: 1.17rem;
+      padding: 1.08rem 0;
+      cursor: pointer;
+      border-radius: 2rem;
+      text-align: center;
+      border: 0.08rem solid rgba($color: #222, $alpha: 0.3);
+      margin-bottom: 1.67rem;
+      user-select: none;
     }
   }
 }
