--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -77,10 +77,19 @@
   }
   .claimedBtn {
     cursor: default;
-    background: linear-gradient(270deg, #f82757 0%, #984cec 100%);
+    // background: linear-gradient(270deg, #f82757 0%, #984cec 100%);
+    background: rgba(#222, 0.2);
     border-color: transparent;
     border: none;
     -webkit-text-fill-color: white;
+    font-size: 1.17rem;
+    font-family: Inter-SemiBold, Inter;
+    font-weight: 600;
+    color: #ffffff;
+    line-height: 1.17rem;
+    &:hover {
+      background: rgba(#222, 0.2);
+    }
   }
   .rewardIcon {
     flex-shrink: 0;
