--- a/styles/carnival.module.scss
+++ b/styles/carnival.module.scss
@@ -142,7 +142,7 @@
 
       padding: 2.5rem 3.33rem 0rem;
       padding-bottom: 1.67rem;
-      
+
       overflow: hidden;
 
       .dailyHeader {
@@ -150,7 +150,7 @@
         align-items: center;
         justify-content: space-between;
         padding-bottom: 1.83rem;
-        border-bottom: 0.16rem solid rgba(#222, 0.2);
+        border-bottom: 0.08rem solid rgba(#222, 0.2);
 
         h3 {
           font-size: 2rem;
@@ -183,6 +183,7 @@
               position: relative;
               width: 2.17rem;
               height: 2.17rem;
+              transform: scale(1.4);
               margin-right: 0.75rem;
               background-color: #222;
             }
@@ -254,7 +255,7 @@
         justify-content: space-between;
         align-items: center;
         padding-bottom: 0.92rem;
-        border-bottom: 0.16rem solid rgba(#222, 0.2);
+        border-bottom: 0.08rem solid rgba(#222, 0.2);
         h3 {
           font-size: 2rem;
           font-family: Inter-SemiBold, Inter;
@@ -432,6 +433,9 @@
                 height: 2.33rem;
                 border-radius: 50%;
                 margin-right: 0.83rem;
+                border-radius: 50%;
+                overflow: hidden;
+                flex-shrink: 0;
               }
               p {
                 font-size: 1.17rem;
@@ -686,6 +690,22 @@
   }
 }
 
+@media screen and (max-width: 900px){
+  .containBox {
+    .container {
+      .dailyActivity {
+        .dailyHeader {
+          .headerDiscord {
+            & > p {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
+  
+}
 @media screen and (max-width: 850px) {
   .containBox {
     .header {
@@ -949,7 +969,7 @@
             height: auto;
             padding: 1.17rem 0.83rem;
             .rewardLevel {
-              width: 6.4rem;
+              width: 8.4rem;
               flex-direction: column;
               align-items: center;
               justify-content: center;
